Copy QC reports to final reports folder, edits to reports and documentation gex.smk - edited to copy QC reports to final reports folder; add in a defaultFilter flag for QC report generation seuratSampleQC.R - add comment seuratSampleQCReport.Rmd - add defaultFilter flag to edit report text and reference depending on if adaptive threshold or filter file threshold was used; add additional documentation for silhouette score / plots seuratSampleQCSummaryReport.Rmd - clustering plot will try to plot resolution with highest silhouette score if silhouette scores are calculated run.md - minor updates to documentation providing links to genome command for custom reference json

--- a/workflow/scripts/seuratSampleQCSummaryReport.Rmd
+++ b/workflow/scripts/seuratSampleQCSummaryReport.Rmd
@@ -43,6 +43,7 @@ plt4 <- "PostFilter_VlnPlot_RNA.png"
 plt5 <- "PreFilter_UMAP_RNA_Filter.png"
 #plt8 <- "TopVariableGenes.png"
 plt9 <- "UMAP_RNA_res.0.8.png"
+sil_wildcard <- "SilhouetteResult_res*.csv"
 
 sample_list <- params$samples
 sample_list <- str_sort(sample_list, numeric=T)
@@ -105,7 +106,26 @@ data %>% kable(format='html') %>%
 ## Clustering 
 
 ```{r  echo=F ,results='asis'}
-data <- cbind(sample_list, lapply(sample_list, function(x) paste0(file.path(maindir, x, plt9) %>% pander::pandoc.image.return(), '{height=512px, width=576px}'))) %>% as.data.frame()
+#Setting default resolution to 0.8
+resolutions <- sapply(sample_list, function(x) 0.8)
+
+#Trying to extract the resolution with the highest silhouette score for each sample. Error messages are suppressed to prevent them from showing up on the report if this fails.
+try(expr={
+
+  #Going through each sample to get the mean silhouette score for each resolution where the silhouette results are found
+  sil_max <- sapply(sample_list, function(x) {
+    sil_files <- Sys.glob(file.path(maindir, x, sil_wildcard))
+    which.max(sapply(sil_files, function(filename) {data <- read.csv(filename); mean(data$sil_width)}))
+  } )
+
+  #Extracting resolution from file name and sample name for each resolution
+  resolutions <- (sil_max %>% names %>% basename %>% tools::file_path_sans_ext() %>% str_split_fixed(pattern='_res.', n=Inf))[,2]
+  names(resolutions) <- sil_max %>% names %>% dirname %>% basename
+  cat("The UMAP plot for the resolution with the highest silhouette score was selected for each sample.\n\n")
+}, silent=TRUE)
+
+#Create data table while replacing the 0.8 from the original plt9 file name and replacing it with resolution from resolution list
+data <- cbind(sample_list, lapply(sample_list, function(x) paste0(file.path(maindir, x, plt9 %>% gsub(pattern='0.8', replacement=resolutions[x])) %>% pander::pandoc.image.return(), '{height=512px, width=576px}'))) %>% as.data.frame()
 colnames(data) <- c('Sample', 'Seurat Clusters')
 data %>% kable(format='html') %>%
         column_spec(column=length(data) %>% seq(), border_left = "1px solid gray", border_right = "1px solid gray") %>%
