--- a/docker/sc_atac_analysis/signacSampleQCReport.Rmd
+++ b/docker/sc_atac_analysis/signacSampleQCReport.Rmd
@@ -1,7 +1,7 @@
 ---
-title: 'Preliminary QC Report for Sample `r params$sample`'
+title: "`r paste0('Preliminary QC Report for Sample ', params$sample)`"
 subtitle: "Initial Sample Preprocessing - scATAC-seq"
-date: '`r Sys.Date()`'
+date: "`r Sys.Date()`"
 output:
   html_document:
     toc: true
